# backend

./: .env  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  script_integration_tests.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
requests/: admin_requests.rest  auth_requests.rest  company_requests.rest  integration_tests.rest  setup_requests.rest  trilha_requests.rest  validate_requests.rest
scripts/: seed_demo_trail.py
scripts/hooks/: run-step.sh
src/: AGENTS.md
src/md_backend/: __init__.py  main.py
src/md_backend/models/: api_models.py  db_models.py
src/md_backend/routes/: admin_resource_router.py  admin_router.py  company_router.py  content_generation_router.py  content_router.py  guardian_router.py  login_router.py  password_reset_router.py  path_router.py  router.py  (+10 more)
tests/: AGENTS.md  conftest.py  helpers.py  keys_test.py  test_main.py
tests/models/: test_authoring_schemas.py  test_fk_naming.py  test_generation_schemas.py  test_resource_model.py  test_sponsorship_model.py  test_student_batch_model.py  test_student_path_progress_model.py  test_sub_path_item_fks.py  test_trail_ordering.py  test_trail_relationships.py
tests/routes/: test_admin_router.py  test_calendar_router.py  test_content_generation_router.py  test_guardian_router.py  test_login_router.py  test_password_reset_router.py  test_path_router.py  test_register_router.py  test_resource_router.py  test_setup_router.py  test_student_router.py  test_student_upload_router.py  test_trail_authoring_router.py  test_upload_router.py  test_validate_router.py
tests/services/: test_admin_service.py  test_calendar_service.py  test_company_service.py  test_csv_processor_service.py  test_guardian_service.py  test_login_service.py  test_partnership_support_service.py  test_password_reset_service.py  test_path_seed_removed.py  test_path_service.py  test_register_service.py  test_resource_service.py  test_s3_storage_service.py  test_school_batch_import.py  test_school_service.py  test_setup_service.py  test_storage_service.py  test_student_service.py  test_student_upload_service.py  test_upload_service.py  test_validate_service.py
tests/utils/: test_database.py  test_email_sender.py  test_security.py  test_security_dependencies.py
(+42 files in other folders)
